Bug 1098701. Part 2: Allow disabling thread assertions. r=kats